tests/ui/issues/issue-16939.stderr
error[E0057]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/issue-16939.rs:5:9
   |
LL |     |t| f(t);
   |         ^ -
   |           |
   |           unexpected argument
   |           help: remove the extra argument
   |
note: callable defined here
  --> $DIR/issue-16939.rs:4:12
   |
LL | fn _foo<F: Fn()> (f: F) {
   |            ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0057`.
